<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addData">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_08">

    </View>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_08"
        android:text="Insert Measurement"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tile_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        app:boxStrokeColor="@color/purple_08"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/systolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Systolic"
            android:inputType="number"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama2"
        app:boxStrokeColor="@color/purple_08"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/dystolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dystolic"
            android:inputType="number"
            android:textColorHint="#090808" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama3"
        app:boxStrokeColor="@color/purple_08"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pulse Rate"
            android:inputType="number"
            android:textColorHint="#0C0C0C" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama4"
        app:boxStrokeColor="@color/purple_08"
        app:boxStrokeWidth="2dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="comment"
            android:inputType="text"
            android:textColorHint="#040303" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonshape"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:background="@drawable/buttonshape"
        android:text="UPDATE"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>