...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_list"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/buttonshape2"
                android:text="DELETE"
                android:textColor="@color/purple_08"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_list"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/buttonshape2"
                android:text="EDIT"
...
